--- a/index.html
+++ b/index.html
@@ -12,19 +12,21 @@
 <!--<meta http-equiv="refresh" content="30">refresh content every 30 seconds-->
 <!--<script src="jquery-3.2.1.min.js"></script> if using jquery-->
     
-<title>Twitter App</title>
+<title>Twiltap</title>
 <link rel="stylesheet" href="main.css">
 </head>
 
     <body>
         <header class="center">
-            <h1>Twitter App</h1>
+            <h1>Twiltap</h1>
         </header> 
 
         <div class="container center">
             <section class="search col-m-12">
                 <form class="search-form">
-                    <input type="search" name="tweetSearch"/>
+                    <label for="query"></label>
+                    <input type="search" name="tweetSearch" id="tweetSearch"/>
+                    
                     <input type="submit">    
                 </form>
             </section>
