updated ReadMe, improved CSS on cards

--- a/public/index.html
+++ b/public/index.html
@@ -20,29 +20,29 @@
     <header class="center">
         <h1 class="p_5TB">Twiltap</h1>
     </header>
+    <div class="outer-container col-12 br_grey">
+        <div class="container center  v_100">
+            <section class="search col-m-12">
+                <form class="search-form">
+                    <label for="query"></label>
+                    <input type="search" class="tweet-search" name="tweet-search" id="tweet-search" />
 
-    <div class="container center br_grey v_100">
-        <section class="search col-m-12">
-            <form class="search-form">
-                <label for="query"></label>
-                <input type="search" class="tweet-search" name="tweet-search" id="tweet-search" />
+                    <button type="submit" class="tweet-button">Search</button>
+                </form>
+            </section>
 
-                <button type="submit" class="tweet-button">Search</button>
-            </form>
-        </section>
-
-        <article class="counter">
-            <p>Showing: <span class="js-counter">0
+            <article class="counter">
+                <p>Showing: <span class="js-counter">0
                     </span> twitter results</p>
-        </article>
-
-        <section class="output br_grey">
-            <article class="output-tweets br_grey">
-                <div class="js-search-results">
-
-                </div>
             </article>
-        </section>
+
+            <section class="output br_grey">
+                <article class="output-tweets br_grey">
+                    <div class="js-search-results">
+                    </div>
+                </article>
+            </section>
+        </div>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
