placehoder added to input

--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
             <section class="search col-m-12">
                 <form class="search-form">
                     <label for="query"></label>
-                    <input type="search" class="tweet-search" name="tweet-search" id="tweet-search" />
+                    <input type="search" class="tweet-search" name="tweet-search" id="tweet-search" placeholder="search a word or name"/>
 
                     <button type="submit" class="tweet-button">Search</button>
                 </form>
